kustomize/_scenarios/oauth-github/ingress-oauth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: 'false'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
  name: oauth2-proxy
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
        path: /oauth2
        pathType: Prefix
  tls:
  - hosts:
    - '*.example.com'
    secretName: rubber-duck-wild-cert
